--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/themes/lowkey"]
-	path = themes/themes/lowkey
-	url = https://github.com/nixentric/Lowkey-Hugo-Theme.git
+[submodule "themes/personal-web"]
+	path = themes/personal-web
+	url = https://github.com/bjacquemet/personal-web.git
