--- a/hugo.toml
+++ b/hugo.toml
@@ -10,7 +10,7 @@ themesDir = './themes'
 
 [params.intro]
   main = "Ahoj, jsem Adam :wave:"
-  sub = "Tohle je moje personální stránka"
+  sub = " "
 
 [params.main]
   latestPublishHeader = "My Latest Project"
